--- a/databinging/webapp/view/App.view.xml
+++ b/databinging/webapp/view/App.view.xml
@@ -20,6 +20,74 @@
 				<Text class="sapUiSmallMargin" text="{/address/street}\n{/address/zip} {/address/city}\n{/address/country}" width="200px" />
 				<Image class="sapUiSmallMargin" width="500px" height="300px" src="{ parts: [ '/address/street', '/address/zip', '/address/city', '/address/country' ], formatter: '.formatMapUrl' }" />
 			</l:VerticalLayout>
+			<l:VerticalLayout>
+	        <Label text="{i18n>salesToDate}" class="sapUiSmallMargin" />
+	        <Input 
+	          width="200px" 
+	          enabled="{/enabled}" 
+	          description="{/currencyCode}"
+	          value="{ parts: [{path: '/salesToDate'}, {path: '/currencyCode'}], type: 'sap.ui.model.type.Currency', formatOptions: {showMeasure: false } }" 
+	        />
+	      </l:VerticalLayout>
 		</content>
 	</Panel>
+	<Panel headerText="{i18n>panel3HeaderText}" class="sapUiResponsiveMargin" width="auto">
+		<content>
+		<!--	<List headerText="{i18n>productListTitle}" items="{products>/Products}">
+				<items>
+					<ObjectListItem
+					press=".onItemSelected"
+					type="Active"
+					title="{products>ProductName}"
+									number="{	parts:
+													[
+														{path: 'products>UnitPrice'},
+														{path: '/currencyCode'}
+													],
+												type: 'sap.ui.model.type.Currency',
+												formatOptions: { showMeasure: false }
+											}"
+									numberUnit="{/currencyCode}"
+									numberState="{= ${products>UnitPrice} &lt;= ${/priceThreshold} ? 'Success' : 'Error' }">
+						<attributes>
+							<ObjectAttribute text="{products>QuantityPerUnit}"/>
+							<ObjectAttribute title="{i18n>stockValue}"
+											 text="{	parts: [
+											 					{path: 'products>UnitPrice'},
+											 					{path: 'products>UnitsInStock'},
+											 					{path: '/currencyCode'}
+											 					],
+														formatter: '.formatStockValue'
+													}" />
+						</attributes>
+					</ObjectListItem>
+				</items>
+			</List>-->
+			<List id="ProductList" headerText="{i18n>productListTitle}" items="{
+				path: 'products>/Products',
+				factory: '.productListFactory'
+			}" />
+		</content>
+	</Panel>
+	<Panel id="productDetailsPanel" headerText="{i18n>panel4HeaderText}" class="sapUiResponsiveMargin" width="auto">
+    <l:Grid defaultSpan="L3 M6 S12" containerQuery="true">
+        <Label text="{i18n>ProductID}:" />
+        <Input value="{products>ProductID}" />
+        
+        <Label text="{i18n>ProductName}:" />
+        <Input value="{products>ProductName}" />
+
+        <Label text="{i18n>QuantityPerUnit}:" />
+        <Input value="{products>QuantityPerUnit}" />
+        
+        <Label text="{i18n>UnitPrice}:" />
+        <Input value="{products>UnitPrice}" />
+        
+        <Label text="{i18n>UnitsInStock}:" />
+        <Input value="{products>UnitsInStock}" />
+        
+        <Label text="{i18n>Discontinued}:" />
+        <CheckBox selected="{products>Discontinued}" />
+    </l:Grid>    
+  </Panel>
 </mvc:View>
