--- a/NavigationAndRouting/webapp/view/App.view.xml
+++ b/NavigationAndRouting/webapp/view/App.view.xml
@@ -1,15 +1,7 @@
 <mvc:View
-	controllerName="sap.ui.demo.nav.controller.App"
-	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc"
-	displayBlock="true">
-	<App id="app">
-		<pages>
-			<Page>
-				<content>
-					<Button text="{i18n>iWantToNavigate}" class="sapUiTinyMarginEnd"/>
-				</content>
-			</Page>
-		</pages>
-	</App>
+   controllerName="sap.ui.demo.nav.controller.App"
+   xmlns="sap.m"
+   xmlns:mvc="sap.ui.core.mvc"
+   displayBlock="true">
+   <App id="app"/>
 </mvc:View>
