--- a/WorklistApp/webapp/view/Object.view.xml
+++ b/WorklistApp/webapp/view/Object.view.xml
@@ -29,6 +29,15 @@
 					</form:SimpleForm>
 				</content>
 			</Panel>
+			<Panel class="sapUiContentPadding" headerText="{i18n>ObjectCommentsTabTitle}">
+				<content>
+					<FeedInput post="onPost"/>
+					<List id="idCommentsList" noDataText="{i18n>ObjectCommentNoData}" showSeparators="Inner"
+						items="{ path: 'productFeedback>/productComments', sorter: { path: 'date', descending: true } }">
+						<FeedListItem info="{productFeedback>type}" text="{productFeedback>comment}" timestamp="{productFeedback>date}"/>
+					</List>
+				</content>
+			</Panel>
 		</semantic:content>
 		<semantic:sendEmailAction>
 			<semantic:SendEmailAction id="shareEmail" press="onShareEmailPress"/>
